tools/groff/obj/build/src/preproc/pic/y.output
   0  $accept : top $end

   1  top : optional_separator
   2      | element_list

   3  element_list : optional_separator middle_element_list optional_separator

   4  middle_element_list : element
   5                      | middle_element_list separator element

   6  optional_separator :
   7                     | separator

   8  separator : ';'
   9            | separator ';'

  10  placeless_element : FIGNAME '=' macro_name
  11                    | VARIABLE '=' any_expr
  12                    | VARIABLE ':' '=' any_expr
  13                    | UP
  14                    | DOWN
  15                    | LEFT
  16                    | RIGHT
  17                    | COMMAND_LINE
  18                    | COMMAND print_args
  19                    | PRINT print_args

  20  $$1 :

  21  placeless_element : SH $$1 DELIMITED
  22                    | COPY TEXT

  23  $$2 :

  24  $$3 :

  25  placeless_element : COPY TEXT THRU $$2 DELIMITED $$3 until

  26  $$4 :

  27  $$5 :

  28  placeless_element : COPY THRU $$4 DELIMITED $$5 until

  29  $$6 :

  30  placeless_element : FOR VARIABLE '=' expr TO expr optional_by DO $$6 DELIMITED
  31                    | simple_if

  32  $$7 :

  33  placeless_element : simple_if ELSE $$7 DELIMITED
  34                    | reset_variables
  35                    | RESET

  36  macro_name : VARIABLE
  37             | LABEL

  38  reset_variables : RESET VARIABLE
  39                  | reset_variables VARIABLE
  40                  | reset_variables ',' VARIABLE

  41  print_args : print_arg
  42             | print_args print_arg

  43  print_arg : expr
  44            | text
  45            | position

  46  $$8 :

  47  simple_if : IF any_expr THEN $$8 DELIMITED

  48  until :
  49        | UNTIL TEXT

  50  any_expr : expr
  51           | text_expr

  52  text_expr : text EQUALEQUAL text
  53            | text NOTEQUAL text
  54            | text_expr ANDAND text_expr
  55            | text_expr ANDAND expr
  56            | expr ANDAND text_expr
  57            | text_expr OROR text_expr
  58            | text_expr OROR expr
  59            | expr OROR text_expr
  60            | '!' text_expr

  61  optional_by :
  62              | BY expr
  63              | BY '*' expr

  64  element : object_spec
  65          | LABEL ':' optional_separator element
  66          | LABEL ':' optional_separator position_not_place
  67          | LABEL ':' optional_separator place

  68  $$9 :

  69  $$10 :

  70  element : '{' $$9 element_list '}' $$10 optional_element
  71          | placeless_element

  72  optional_element :
  73                   | element

  74  object_spec : BOX
  75              | CIRCLE
  76              | ELLIPSE
  77              | ARC
  78              | LINE
  79              | ARROW
  80              | MOVE
  81              | SPLINE
  82              | text
  83              | PLOT expr
  84              | PLOT expr text

  85  $$11 :

  86  object_spec : '[' $$11 element_list ']'
  87              | object_spec HEIGHT expr
  88              | object_spec RADIUS expr
  89              | object_spec WIDTH expr
  90              | object_spec DIAMETER expr
  91              | object_spec expr
  92              | object_spec UP
  93              | object_spec UP expr
  94              | object_spec DOWN
  95              | object_spec DOWN expr
  96              | object_spec RIGHT
  97              | object_spec RIGHT expr
  98              | object_spec LEFT
  99              | object_spec LEFT expr
 100              | object_spec FROM position
 101              | object_spec TO position
 102              | object_spec AT position
 103              | object_spec WITH path
 104              | object_spec WITH position
 105              | object_spec BY expr_pair
 106              | object_spec THEN
 107              | object_spec SOLID
 108              | object_spec DOTTED
 109              | object_spec DOTTED expr
 110              | object_spec DASHED
 111              | object_spec DASHED expr
 112              | object_spec FILL
 113              | object_spec FILL expr
 114              | object_spec SHADED text
 115              | object_spec COLORED text
 116              | object_spec OUTLINED text
 117              | object_spec CHOP
 118              | object_spec CHOP expr
 119              | object_spec SAME
 120              | object_spec INVISIBLE
 121              | object_spec LEFT_ARROW_HEAD
 122              | object_spec RIGHT_ARROW_HEAD
 123              | object_spec DOUBLE_ARROW_HEAD
 124              | object_spec CW
 125              | object_spec CCW
 126              | object_spec text
 127              | object_spec LJUST
 128              | object_spec RJUST
 129              | object_spec ABOVE
 130              | object_spec BELOW
 131              | object_spec THICKNESS expr
 132              | object_spec ALIGNED

 133  text : TEXT
 134       | SPRINTF '(' TEXT sprintf_args ')'

 135  sprintf_args :
 136               | sprintf_args ',' expr

 137  position : position_not_place
 138           | place
 139           | '(' place ')'

 140  position_not_place : expr_pair
 141                     | position '+' expr_pair
 142                     | '(' position '+' expr_pair ')'
 143                     | position '-' expr_pair
 144                     | '(' position '-' expr_pair ')'
 145                     | '(' position ',' position ')'
 146                     | expr between position AND position
 147                     | '(' expr between position AND position ')'
 148                     | expr '<' position ',' position '>'
 149                     | '(' expr '<' position ',' position '>' ')'

 150  between : BETWEEN
 151          | OF THE WAY BETWEEN

 152  expr_pair : expr ',' expr
 153            | '(' expr_pair ')'

 154  place : label
 155        | label corner
 156        | corner label
 157        | corner OF label
 158        | HERE

 159  label : LABEL
 160        | nth_primitive
 161        | label '.' LABEL

 162  ordinal : ORDINAL
 163          | '`' any_expr TH

 164  optional_ordinal_last : LAST
 165                        | ordinal LAST

 166  nth_primitive : ordinal object_type
 167                | optional_ordinal_last object_type

 168  object_type : BOX
 169              | CIRCLE
 170              | ELLIPSE
 171              | ARC
 172              | LINE
 173              | ARROW
 174              | SPLINE
 175              | '[' ']'
 176              | TEXT

 177  label_path : '.' LABEL
 178             | label_path '.' LABEL

 179  relative_path : corner
 180                | label_path
 181                | label_path corner

 182  path : relative_path
 183       | '(' relative_path ',' relative_path ')'
 184       | ORDINAL LAST object_type relative_path
 185       | LAST object_type relative_path
 186       | ORDINAL object_type relative_path
 187       | LABEL relative_path

 188  corner : DOT_N
 189         | DOT_E
 190         | DOT_W
 191         | DOT_S
 192         | DOT_NE
 193         | DOT_SE
 194         | DOT_NW
 195         | DOT_SW
 196         | DOT_C
 197         | DOT_START
 198         | DOT_END
 199         | TOP
 200         | BOTTOM
 201         | LEFT
 202         | RIGHT
 203         | UPPER LEFT
 204         | LOWER LEFT
 205         | UPPER RIGHT
 206         | LOWER RIGHT
 207         | LEFT_CORNER
 208         | RIGHT_CORNER
 209         | UPPER LEFT_CORNER
 210         | LOWER LEFT_CORNER
 211         | UPPER RIGHT_CORNER
 212         | LOWER RIGHT_CORNER
 213         | NORTH
 214         | SOUTH
 215         | EAST
 216         | WEST
 217         | CENTER
 218         | START
 219         | END

 220  expr : VARIABLE
 221       | NUMBER
 222       | place DOT_X
 223       | place DOT_Y
 224       | place DOT_HT
 225       | place DOT_WID
 226       | place DOT_RAD
 227       | expr '+' expr
 228       | expr '-' expr
 229       | expr '*' expr
 230       | expr '/' expr
 231       | expr '%' expr
 232       | expr '^' expr
 233       | '-' expr
 234       | '(' any_expr ')'
 235       | SIN '(' any_expr ')'
 236       | COS '(' any_expr ')'
 237       | ATAN2 '(' any_expr ',' any_expr ')'
 238       | LOG '(' any_expr ')'
 239       | EXP '(' any_expr ')'
 240       | SQRT '(' any_expr ')'
 241       | K_MAX '(' any_expr ',' any_expr ')'
 242       | K_MIN '(' any_expr ',' any_expr ')'
 243       | INT '(' any_expr ')'
 244       | RAND '(' any_expr ')'
 245       | RAND '(' ')'
 246       | SRAND '(' any_expr ')'
 247       | expr '<' expr
 248       | expr LESSEQUAL expr
 249       | expr '>' expr
 250       | expr GREATEREQUAL expr
 251       | expr EQUALEQUAL expr
 252       | expr NOTEQUAL expr
 253       | expr ANDAND expr
 254       | expr OROR expr
 255       | '!' expr

state 0
	$accept : . top $end  (0)
	optional_separator : .  (6)

	';'  shift 1
	$end  reduce 6
	LABEL  reduce 6
	VARIABLE  reduce 6
	TEXT  reduce 6
	COMMAND_LINE  reduce 6
	UP  reduce 6
	DOWN  reduce 6
	LEFT  reduce 6
	RIGHT  reduce 6
	BOX  reduce 6
	CIRCLE  reduce 6
	ELLIPSE  reduce 6
	ARC  reduce 6
	LINE  reduce 6
	ARROW  reduce 6
	MOVE  reduce 6
	SPLINE  reduce 6
	FIGNAME  reduce 6
	COPY  reduce 6
	SH  reduce 6
	PRINT  reduce 6
	FOR  reduce 6
	IF  reduce 6
	RESET  reduce 6
	PLOT  reduce 6
	SPRINTF  reduce 6
	COMMAND  reduce 6
	'['  reduce 6
	'{'  reduce 6

	top  goto 2
	element_list  goto 3
	optional_separator  goto 4
	separator  goto 5


state 1
	separator : ';' .  (8)

	.  reduce 8


state 2
	$accept : top . $end  (0)

	$end  accept


state 3
	top : element_list .  (2)

	.  reduce 2


state 4
	top : optional_separator .  (1)
	element_list : optional_separator . middle_element_list optional_separator  (3)

	LABEL  shift 6
	VARIABLE  shift 7
	TEXT  shift 8
	COMMAND_LINE  shift 9
	UP  shift 10
	DOWN  shift 11
	LEFT  shift 12
	RIGHT  shift 13
	BOX  shift 14
	CIRCLE  shift 15
	ELLIPSE  shift 16
	ARC  shift 17
	LINE  shift 18
	ARROW  shift 19
	MOVE  shift 20
	SPLINE  shift 21
	FIGNAME  shift 22
	COPY  shift 23
	SH  shift 24
	PRINT  shift 25
	FOR  shift 26
	IF  shift 27
	RESET  shift 28
	PLOT  shift 29
	SPRINTF  shift 30
	COMMAND  shift 31
	'['  shift 32
	'{'  shift 33
	$end  reduce 1

	simple_if  goto 34
	element  goto 35
	middle_element_list  goto 36
	object_spec  goto 37
	text  goto 38
	placeless_element  goto 39
	reset_variables  goto 40


state 5
	optional_separator : separator .  (7)
	separator : separator . ';'  (9)

	';'  shift 41
	$end  reduce 7
	LABEL  reduce 7
	VARIABLE  reduce 7
	NUMBER  reduce 7
	TEXT  reduce 7
	COMMAND_LINE  reduce 7
	ORDINAL  reduce 7
	LAST  reduce 7
	UP  reduce 7
	DOWN  reduce 7
	LEFT  reduce 7
	RIGHT  reduce 7
	BOX  reduce 7
	CIRCLE  reduce 7
	ELLIPSE  reduce 7
	ARC  reduce 7
	LINE  reduce 7
	ARROW  reduce 7
	MOVE  reduce 7
	SPLINE  reduce 7
	FIGNAME  reduce 7
	HERE  reduce 7
	DOT_N  reduce 7
	DOT_E  reduce 7
	DOT_W  reduce 7
	DOT_S  reduce 7
	DOT_NE  reduce 7
	DOT_SE  reduce 7
	DOT_NW  reduce 7
	DOT_SW  reduce 7
	DOT_C  reduce 7
	DOT_START  reduce 7
	DOT_END  reduce 7
	SIN  reduce 7
	COS  reduce 7
	ATAN2  reduce 7
	LOG  reduce 7
	EXP  reduce 7
	SQRT  reduce 7
	K_MAX  reduce 7
	K_MIN  reduce 7
	INT  reduce 7
	RAND  reduce 7
	SRAND  reduce 7
	COPY  reduce 7
	TOP  reduce 7
	BOTTOM  reduce 7
	UPPER  reduce 7
	LOWER  reduce 7
	SH  reduce 7
	PRINT  reduce 7
	FOR  reduce 7
	IF  reduce 7
	LEFT_CORNER  reduce 7
	RIGHT_CORNER  reduce 7
	NORTH  reduce 7
	SOUTH  reduce 7
	EAST  reduce 7
	WEST  reduce 7
	CENTER  reduce 7
	END  reduce 7
	START  reduce 7
	RESET  reduce 7
	PLOT  reduce 7
	SPRINTF  reduce 7
	COMMAND  reduce 7
	'('  reduce 7
	'`'  reduce 7
	'['  reduce 7
	'-'  reduce 7
	'!'  reduce 7
	'{'  reduce 7


state 6
	element : LABEL . ':' optional_separator element  (65)
	element : LABEL . ':' optional_separator position_not_place  (66)
	element : LABEL . ':' optional_separator place  (67)

	':'  shift 42
	.  error


state 7
	placeless_element : VARIABLE . '=' any_expr  (11)
	placeless_element : VARIABLE . ':' '=' any_expr  (12)

	'='  shift 43
	':'  shift 44
	.  error


state 8
	text : TEXT .  (133)

	.  reduce 133


state 9
	placeless_element : COMMAND_LINE .  (17)

	.  reduce 17


state 10
	placeless_element : UP .  (13)

	.  reduce 13


state 11
	placeless_element : DOWN .  (14)

	.  reduce 14


state 12
	placeless_element : LEFT .  (15)

	.  reduce 15


state 13
	placeless_element : RIGHT .  (16)

	.  reduce 16


state 14
	object_spec : BOX .  (74)

	.  reduce 74


state 15
	object_spec : CIRCLE .  (75)

	.  reduce 75


state 16
	object_spec : ELLIPSE .  (76)

	.  reduce 76


state 17
	object_spec : ARC .  (77)

	.  reduce 77


state 18
	object_spec : LINE .  (78)

	.  reduce 78


state 19
	object_spec : ARROW .  (79)

	.  reduce 79


state 20
	object_spec : MOVE .  (80)

	.  reduce 80


state 21
	object_spec : SPLINE .  (81)

	.  reduce 81


state 22
	placeless_element : FIGNAME . '=' macro_name  (10)

	'='  shift 45
	.  error


state 23
	placeless_element : COPY . TEXT  (22)
	placeless_element : COPY . TEXT THRU $$2 DELIMITED $$3 until  (25)
	placeless_element : COPY . THRU $$4 DELIMITED $$5 until  (28)

	TEXT  shift 46
	THRU  shift 47
	.  error


state 24
	placeless_element : SH . $$1 DELIMITED  (21)
	$$1 : .  (20)

	.  reduce 20

	$$1  goto 48


state 25
	placeless_element : PRINT . print_args  (19)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	TEXT  shift 8
	ORDINAL  shift 52
	LAST  shift 53
	LEFT  shift 54
	RIGHT  shift 55
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	SPRINTF  shift 30
	'('  shift 92
	'`'  shift 93
	'-'  shift 94
	'!'  shift 95
	.  error

	expr  goto 96
	expr_pair  goto 97
	position_not_place  goto 98
	nth_primitive  goto 99
	corner  goto 100
	place  goto 101
	label  goto 102
	position  goto 103
	optional_ordinal_last  goto 104
	ordinal  goto 105
	text  goto 106
	print_args  goto 107
	print_arg  goto 108


state 26
	placeless_element : FOR . VARIABLE '=' expr TO expr optional_by DO $$6 DELIMITED  (30)

	VARIABLE  shift 109
	.  error


state 27
	simple_if : IF . any_expr THEN $$8 DELIMITED  (47)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	TEXT  shift 8
	ORDINAL  shift 52
	LAST  shift 53
	LEFT  shift 54
	RIGHT  shift 55
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	SPRINTF  shift 30
	'('  shift 110
	'`'  shift 93
	'-'  shift 94
	'!'  shift 111
	.  error

	expr  goto 112
	any_expr  goto 113
	text_expr  goto 114
	nth_primitive  goto 99
	corner  goto 100
	place  goto 115
	label  goto 102
	optional_ordinal_last  goto 104
	ordinal  goto 105
	text  goto 116


state 28
	placeless_element : RESET .  (35)
	reset_variables : RESET . VARIABLE  (38)

	VARIABLE  shift 117
	$end  reduce 35
	';'  reduce 35
	'}'  reduce 35
	']'  reduce 35


state 29
	object_spec : PLOT . expr  (83)
	object_spec : PLOT . expr text  (84)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	ORDINAL  shift 52
	LAST  shift 53
	LEFT  shift 54
	RIGHT  shift 55
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	'('  shift 110
	'`'  shift 93
	'-'  shift 94
	'!'  shift 95
	.  error

	expr  goto 118
	nth_primitive  goto 99
	corner  goto 100
	place  goto 115
	label  goto 102
	optional_ordinal_last  goto 104
	ordinal  goto 105


state 30
	text : SPRINTF . '(' TEXT sprintf_args ')'  (134)

	'('  shift 119
	.  error


state 31
	placeless_element : COMMAND . print_args  (18)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	TEXT  shift 8
	ORDINAL  shift 52
	LAST  shift 53
	LEFT  shift 54
	RIGHT  shift 55
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	SPRINTF  shift 30
	'('  shift 92
	'`'  shift 93
	'-'  shift 94
	'!'  shift 95
	.  error

	expr  goto 96
	expr_pair  goto 97
	position_not_place  goto 98
	nth_primitive  goto 99
	corner  goto 100
	place  goto 101
	label  goto 102
	position  goto 103
	optional_ordinal_last  goto 104
	ordinal  goto 105
	text  goto 106
	print_args  goto 120
	print_arg  goto 108


state 32
	object_spec : '[' . $$11 element_list ']'  (86)
	$$11 : .  (85)

	.  reduce 85

	$$11  goto 121


state 33
	element : '{' . $$9 element_list '}' $$10 optional_element  (70)
	$$9 : .  (68)

	.  reduce 68

	$$9  goto 122


state 34
	placeless_element : simple_if .  (31)
	placeless_element : simple_if . ELSE $$7 DELIMITED  (33)

	ELSE  shift 123
	$end  reduce 31
	';'  reduce 31
	'}'  reduce 31
	']'  reduce 31


state 35
	middle_element_list : element .  (4)

	.  reduce 4


state 36
	element_list : optional_separator middle_element_list . optional_separator  (3)
	middle_element_list : middle_element_list . separator element  (5)
	optional_separator : .  (6)

	';'  shift 1
	$end  reduce 6
	'}'  reduce 6
	']'  reduce 6

	optional_separator  goto 124
	separator  goto 125


state 37
	element : object_spec .  (64)
	object_spec : object_spec . HEIGHT expr  (87)
	object_spec : object_spec . RADIUS expr  (88)
	object_spec : object_spec . WIDTH expr  (89)
	object_spec : object_spec . DIAMETER expr  (90)
	object_spec : object_spec . expr  (91)
	object_spec : object_spec . UP  (92)
	object_spec : object_spec . UP expr  (93)
	object_spec : object_spec . DOWN  (94)
	object_spec : object_spec . DOWN expr  (95)
	object_spec : object_spec . RIGHT  (96)
	object_spec : object_spec . RIGHT expr  (97)
	object_spec : object_spec . LEFT  (98)
	object_spec : object_spec . LEFT expr  (99)
	object_spec : object_spec . FROM position  (100)
	object_spec : object_spec . TO position  (101)
	object_spec : object_spec . AT position  (102)
	object_spec : object_spec . WITH path  (103)
	object_spec : object_spec . WITH position  (104)
	object_spec : object_spec . BY expr_pair  (105)
	object_spec : object_spec . THEN  (106)
	object_spec : object_spec . SOLID  (107)
	object_spec : object_spec . DOTTED  (108)
	object_spec : object_spec . DOTTED expr  (109)
	object_spec : object_spec . DASHED  (110)
	object_spec : object_spec . DASHED expr  (111)
	object_spec : object_spec . FILL  (112)
	object_spec : object_spec . FILL expr  (113)
	object_spec : object_spec . SHADED text  (114)
	object_spec : object_spec . COLORED text  (115)
	object_spec : object_spec . OUTLINED text  (116)
	object_spec : object_spec . CHOP  (117)
	object_spec : object_spec . CHOP expr  (118)
	object_spec : object_spec . SAME  (119)
	object_spec : object_spec . INVISIBLE  (120)
	object_spec : object_spec . LEFT_ARROW_HEAD  (121)
	object_spec : object_spec . RIGHT_ARROW_HEAD  (122)
	object_spec : object_spec . DOUBLE_ARROW_HEAD  (123)
	object_spec : object_spec . CW  (124)
	object_spec : object_spec . CCW  (125)
	object_spec : object_spec . text  (126)
	object_spec : object_spec . LJUST  (127)
	object_spec : object_spec . RJUST  (128)
	object_spec : object_spec . ABOVE  (129)
	object_spec : object_spec . BELOW  (130)
	object_spec : object_spec . THICKNESS expr  (131)
	object_spec : object_spec . ALIGNED  (132)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	TEXT  shift 8
	ORDINAL  shift 52
	LEFT_ARROW_HEAD  shift 126
	RIGHT_ARROW_HEAD  shift 127
	DOUBLE_ARROW_HEAD  shift 128
	LAST  shift 53
	UP  shift 129
	DOWN  shift 130
	LEFT  shift 131
	RIGHT  shift 132
	HEIGHT  shift 133
	RADIUS  shift 134
	WIDTH  shift 135
	DIAMETER  shift 136
	FROM  shift 137
	TO  shift 138
	AT  shift 139
	WITH  shift 140
	BY  shift 141
	THEN  shift 142
	SOLID  shift 143
	DOTTED  shift 144
	DASHED  shift 145
	CHOP  shift 146
	SAME  shift 147
	INVISIBLE  shift 148
	LJUST  shift 149
	RJUST  shift 150
	ABOVE  shift 151
	BELOW  shift 152
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	CW  shift 153
	CCW  shift 154
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	THICKNESS  shift 155
	FILL  shift 156
	COLORED  shift 157
	OUTLINED  shift 158
	SHADED  shift 159
	ALIGNED  shift 160
	SPRINTF  shift 30
	'('  shift 110
	'`'  shift 93
	'-'  shift 94
	'!'  shift 95
	$end  reduce 64
	';'  reduce 64
	'}'  reduce 64
	']'  reduce 64

	expr  goto 161
	nth_primitive  goto 99
	corner  goto 100
	place  goto 115
	label  goto 102
	optional_ordinal_last  goto 104
	ordinal  goto 105
	text  goto 162


state 38
	object_spec : text .  (82)

	.  reduce 82


state 39
	element : placeless_element .  (71)

	.  reduce 71


state 40
	placeless_element : reset_variables .  (34)
	reset_variables : reset_variables . VARIABLE  (39)
	reset_variables : reset_variables . ',' VARIABLE  (40)

	VARIABLE  shift 163
	','  shift 164
	$end  reduce 34
	';'  reduce 34
	'}'  reduce 34
	']'  reduce 34


state 41
	separator : separator ';' .  (9)

	.  reduce 9


state 42
	element : LABEL ':' . optional_separator element  (65)
	element : LABEL ':' . optional_separator position_not_place  (66)
	element : LABEL ':' . optional_separator place  (67)
	optional_separator : .  (6)

	';'  shift 1
	LABEL  reduce 6
	VARIABLE  reduce 6
	NUMBER  reduce 6
	TEXT  reduce 6
	COMMAND_LINE  reduce 6
	ORDINAL  reduce 6
	LAST  reduce 6
	UP  reduce 6
	DOWN  reduce 6
	LEFT  reduce 6
	RIGHT  reduce 6
	BOX  reduce 6
	CIRCLE  reduce 6
	ELLIPSE  reduce 6
	ARC  reduce 6
	LINE  reduce 6
	ARROW  reduce 6
	MOVE  reduce 6
	SPLINE  reduce 6
	FIGNAME  reduce 6
	HERE  reduce 6
	DOT_N  reduce 6
	DOT_E  reduce 6
	DOT_W  reduce 6
	DOT_S  reduce 6
	DOT_NE  reduce 6
	DOT_SE  reduce 6
	DOT_NW  reduce 6
	DOT_SW  reduce 6
	DOT_C  reduce 6
	DOT_START  reduce 6
	DOT_END  reduce 6
	SIN  reduce 6
	COS  reduce 6
	ATAN2  reduce 6
	LOG  reduce 6
	EXP  reduce 6
	SQRT  reduce 6
	K_MAX  reduce 6
	K_MIN  reduce 6
	INT  reduce 6
	RAND  reduce 6
	SRAND  reduce 6
	COPY  reduce 6
	TOP  reduce 6
	BOTTOM  reduce 6
	UPPER  reduce 6
	LOWER  reduce 6
	SH  reduce 6
	PRINT  reduce 6
	FOR  reduce 6
	IF  reduce 6
	LEFT_CORNER  reduce 6
	RIGHT_CORNER  reduce 6
	NORTH  reduce 6
	SOUTH  reduce 6
	EAST  reduce 6
	WEST  reduce 6
	CENTER  reduce 6
	END  reduce 6
	START  reduce 6
	RESET  reduce 6
	PLOT  reduce 6
	SPRINTF  reduce 6
	COMMAND  reduce 6
	'('  reduce 6
	'`'  reduce 6
	'['  reduce 6
	'-'  reduce 6
	'!'  reduce 6
	'{'  reduce 6

	optional_separator  goto 165
	separator  goto 5


state 43
	placeless_element : VARIABLE '=' . any_expr  (11)

	LABEL  shift 49
	VARIABLE  shift 50
	NUMBER  shift 51
	TEXT  shift 8
	ORDINAL  shift 52
	LAST  shift 53
	LEFT  shift 54
	RIGHT  shift 55
	HERE  shift 56
	DOT_N  shift 57
	DOT_E  shift 58
	DOT_W  shift 59
	DOT_S  shift 60
	DOT_NE  shift 61
	DOT_SE  shift 62
	DOT_NW  shift 63
	DOT_SW  shift 64
	DOT_C  shift 65
	DOT_START  shift 66
	DOT_END  shift 67
	SIN  shift 68
	COS  shift 69
	ATAN2  shift 70
	LOG  shift 71
	EXP  shift 72
	SQRT  shift 73
	K_MAX  shift 74
	K_MIN  shift 75
	INT  shift 76
	RAND  shift 77
	SRAND  shift 78
	TOP  shift 79
	BOTTOM  shift 80
	UPPER  shift 81
	LOWER  shift 82
	LEFT_CORNER  shift 83
	RIGHT_CORNER  shift 84
	NORTH  shift 85
	SOUTH  shift 86
	EAST  shift 87
	WEST  shift 88
	CENTER  shift 89
	END  shift 90
	START  shift 91
	SPRINTF  shift 30
	'('  shift 110
	'`'  shift 93
	'-'  shift 94
	'!'  shift 111
	.  error

	expr  goto 112
	any_expr  goto 166
	text_expr  goto 114
	nth_primitive  goto 99
	corner  goto 100
	place  goto 115
	label  goto 102
	optional_ordinal_last  goto 104
	ordinal  goto 105
	text  goto 116


state 44
	placeless_element : VARIABLE ':' . '=' any_expr  (12)

	'='  shift 167
	.  error


state 45
	placeless_element : FIGNAME '=' . macro_name  (10)

	LABEL  shift 168
	VARIABLE  shift 169
	.  error

	macro_name  goto 170


state 46
	placeless_element : COPY TEXT .  (22)
	placeless_element : COPY TEXT . THRU $$2 DELIMITED $$3 until  (25)

	THRU  shift 171
	$end  reduce 22
	';'  reduce 22
	'}'  reduce 22
	']'  reduce 22

